--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,8 +9,8 @@ a img{border:none}
 .sprite-search-white,#search-input .icon{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -80px;height:40px;width:40px}
 .sprite-plus-white,#paste-link-input .icon{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -120px;height:40px;width:40px}
 .sprite-twitter-white{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -160px;height:40px;width:40px}
-.sprite-arrow-up-white,#links .link .votes .up-vote-this:before{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -200px;height:20px;width:20px}
-.sprite-arrow-down-white,#links .link .down-vote-this:before{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:-40px -200px;height:20px;width:20px}
+.sprite-arrow-up-white,#links .link .votes .up-vote-this:before,#links .link .votes .up-vote-this-after:before{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -200px;height:20px;width:20px}
+.sprite-arrow-down-white,#links .link .down-vote-this:before,#links .link .down-vote-this-after:before{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:-40px -200px;height:20px;width:20px}
 .sprite-twitter-white{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -160px;height:40px;width:40px}
 html{font-size:62.5%}
 .wf-loading body{opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}
@@ -88,12 +88,20 @@ header h2{color:#b8e864;display:inline-block;font:300 1.8rem "source-sans-pro",a
 #links .link .votes .up-vote-this:before{content:"";display:inline-block}
 #links .link .votes .up-vote-this:hover,#links .link .votes .up-vote-this:hover .up-arrow{padding:4px 0 0;background-color:#666}
 #links .link .votes .up-vote-this:active,#links .link .votes .up-vote-this:active .up-arrow{-webkit-transition:all 0s ease;-moz-transition:all 0s ease;-o-transition:all 0s ease;-ms-transition:all 0s ease;transition:all 0s ease;background-color:#7fffd4}
+#links .link .votes .up-vote-this-after{-webkit-border-radius:2px;border-radius:2px;-webkit-box-shadow:0 0 0 6px rgba(0,0,0,0.15);box-shadow:0 0 0 6px rgba(0,0,0,0.15);-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background-color:#666;cursor:pointer;height:32px;left:0;padding:7px 0 0;position:absolute;text-align:center;top:0;width:32px;}
+#links .link .votes .up-vote-this-after .up-arrow{-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background-color:#333;height:9px;margin:-5px -4px 0 0;position:absolute;right:0;top:50%;width:9px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}
+#links .link .votes .up-vote-this-after:before{content:"";display:inline-block}
+#links .link .votes .up-vote-this-after:active,#links .link .votes .up-vote-this-after:active .up-arrow{-webkit-transition:all 0s ease;-moz-transition:all 0s ease;-o-transition:all 0s ease;-ms-transition:all 0s ease;transition:all 0s ease;background-color:#7fffd4}
 #links .link .votes .vote-count{color:#666;font:300 2.4rem "source-sans-pro",arial,sans;left:46px;position:absolute;top:12px}
 #links .link .down-vote-this{-webkit-border-radius:2px;border-radius:2px;-webkit-box-shadow:0 0 0 6px rgba(0,0,0,0.15);box-shadow:0 0 0 6px rgba(0,0,0,0.15);-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background-color:#333;cursor:pointer;height:32px;left:0;padding:7px 0 0;position:absolute;text-align:center;top:50px;width:32px;}
 #links .link .down-vote-this .down-arrow{-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background-color:#333;height:9px;margin:-5px -4px 0 0;position:absolute;right:0;top:50%;width:9px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}
 #links .link .down-vote-this:before{content:"";display:inline-block}
 #links .link .down-vote-this:hover,#links .link .down-vote-this:hover .down-arrow{padding:9px 0 0;background-color:#666}
 #links .link .down-vote-this:active,#links .link .down-vote-this:active .down-arrow{-webkit-transition:all 0s ease;-moz-transition:all 0s ease;-o-transition:all 0s ease;-ms-transition:all 0s ease;transition:all 0s ease;background-color:#7fffd4}
+#links .link .down-vote-this-after{-webkit-border-radius:2px;border-radius:2px;-webkit-box-shadow:0 0 0 6px rgba(0,0,0,0.15);box-shadow:0 0 0 6px rgba(0,0,0,0.15);-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background-color:#666;cursor:pointer;height:32px;left:0;padding:7px 0 0;position:absolute;text-align:center;top:50px;width:32px;}
+#links .link .down-vote-this-after .down-arrow{-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background-color:#333;height:9px;margin:-5px -4px 0 0;position:absolute;right:0;top:50%;width:9px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}
+#links .link .down-vote-this-after:before{content:"";display:inline-block}
+#links .link .down-vote-this-after:active,#links .link .down-vote-this-after:active .down-arrow{-webkit-transition:all 0s ease;-moz-transition:all 0s ease;-o-transition:all 0s ease;-ms-transition:all 0s ease;transition:all 0s ease;background-color:#7fffd4}
 @media screen and (min-width: 600px){#links{margin:60px 0 0;}
 #links .link{border-bottom:none;padding:0 30px 30px 160px;}
 #links .link .votes{left:25px;margin:0;position:absolute;top:1px;width:auto;}
