--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -16,6 +16,7 @@
         width 100%            
         overflow hidden   /* "overflow" value must be different from "visible" */ 
         text-overflow ellipsis  // text-overflow ellipsis
+        
 
     .preview-logo{
       sprite_mixin(0px, 280px, 60px, 60px)
@@ -30,6 +31,7 @@
     .votes
       font-size 0
       height 32px
+      width 30px
       margin 20px 0 0 10px
       position relative
       width 90px
@@ -79,7 +81,7 @@
         font $sans-s-light
         left 46px
         position absolute
-        top 12px
+        top 20px
 
     .down-vote-this
       border-radius 2px
