--- a/css/imports/components/_modal.styl
+++ b/css/imports/components/_modal.styl
@@ -1,5 +1,5 @@
 .modal
-  width 40%
+  width 50%
   margin-left -(@width/2)
 
   .modal-header
@@ -7,22 +7,31 @@
 
   .modal-body
     font $sans-xs
-    height 200px
+    overflow visible
 
     .item-info
-      display inline-block
       margin 0 0 10px 0
       padding 0
+      border-bottom 2px solid $ao-grey
 
       .title
         font $sans-s
         margin 0
+        border-bottom 0
 
       .url
         font $sans-xxs-light
         margin-right 5px
         display inline-block
         overflow ellipsis
+        border-bottom 0
+
+    .level-question
+      display inline-block
+      margin-right 40px
+
+    .category-buttons
+      margin 0 5px
 
     .suggested-tags
       color $green-dark
@@ -31,4 +40,8 @@
     #spinner
       position absolute
       left 48%
+
+    .item-submit
+      float right
+      margin-bottom 10px
 
