imprpoved styling of buttons to show vote status

--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -76,9 +76,9 @@
 
       .up-vote-this-after
         border-radius 2px
-        box-shadow 0 0 0 6px rgba(0,0,0,0.15)
+        box-shadow 0 0 0 6px $oe-grey
         transition all 0.2s ease
-        background-color $fo-grey
+        background-color $ab-grey
         cursor pointer
         height 32px
         left 0
@@ -90,7 +90,7 @@
 
         .up-arrow
           transition all 0.2s ease
-          background-color $ho-grey
+          background-color $ab-grey
           height 9px 
           margin -5px -4px 0 0
           position absolute
@@ -107,7 +107,6 @@
         &:active
         &:active .up-arrow
           transition all 0s ease
-          background-color $bluegreen
 
       .vote-count
         color $fo-grey
@@ -160,9 +159,9 @@
 
     .down-vote-this-after
       border-radius 2px
-      box-shadow 0 0 0 6px rgba(0,0,0,0.15)
+      box-shadow 0 0 0 6px $oe-grey
       transition all 0.2s ease
-      background-color $fo-grey
+      background-color $ab-grey
       cursor pointer
       height 32px
       left 0
@@ -174,7 +173,7 @@
 
       .down-arrow {
         transition all 0.2s ease
-        background-color $ho-grey
+        background-color $ab-grey
         height 9px 
         margin -5px -4px 0 0
         position absolute
@@ -192,7 +191,6 @@
       &:active
       &:active .down-arrow
         transition all 0s ease
-        background-color $bluegreen
 
 
 @media screen-to-break-one
