--- a/css/imports/variables/_icons.styl
+++ b/css/imports/variables/_icons.styl
@@ -1,14 +1,15 @@
 @font-face {
   font-family: 'icomoon';
-  src:url('../lib/icomoon11287/fonts/icomoon.eot');
-  src:url('../lib/icomoon11287/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-    url('../lib/icomoon11287/fonts/icomoon.woff') format('woff'),
-    url('../lib/icomoon11287/fonts/icomoon.ttf') format('truetype'),
-    url('../lib/icomoon11287/fonts/icomoon.svg#icomoon') format('svg');
+  src:url('../lib/icomoon76310/fonts/icomoon.eot');
+  src:url('../lib/icomoon76310/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+    url('../lib/icomoon76310/fonts/icomoon.woff') format('woff'),
+    url('../lib/icomoon76310/fonts/icomoon.ttf') format('truetype'),
+    url('../lib/icomoon76310/fonts/icomoon.svg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-.icon-stackoverflow, .icon-camera, .icon-power-cord, .icon-book {
+
+.icon-bullhorn, .icon-book {
   font-family: 'icomoon';
   speak: none;
   font-style: normal;
@@ -18,15 +19,9 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
 }
-.icon-stackoverflow:before {
-  content: "\e001";
-}
-.icon-camera:before {
-  content: "\e002";
-}
-.icon-power-cord:before {
-  content: "\e003";
+.icon-bullhorn:before {
+  content: "\e000";
 }
 .icon-book:before {
-  content: "\e000";
+  content: "\e001";
 }
