--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -18,10 +18,10 @@
         text-overflow ellipsis  // text-overflow ellipsis
         
 
-    .preview-logo{
+    .preview-logo
       sprite_mixin(0px, 280px, 60px, 60px)
-    }    
-
+      &:hover
+        cursor pointer
     h2
       color $co-grey
       font sans-s-light
