another attempt to fix the modal closing

--- a/public/partials/tags_modal.html
+++ b/public/partials/tags_modal.html
@@ -30,5 +30,5 @@
     </div>
     <span id='spinner' us-spinner='{lines:6, length: 0, width: 15, radius: 12}' ng-hide='doneLoading'></span>
   </div>
-  <button class="btn item-submit" ng-click="hide();send()">Submit</button>
+  <button class="btn item-submit close" data-dismiss="modal" ng-click="hide();send()">Submit</button>
 </div>
