change login logout display option.  add avatar when logged in.

--- a/css/imports/components/_nav.styl
+++ b/css/imports/components/_nav.styl
@@ -32,15 +32,20 @@ nav
 
   #logo-github
     sprite_mixin(0px, 220px, 60px, 60px)
-    margin-top 10px
+    margin-top 0px
     margin-left 10px
+
+    #avatar
+      border-width 0
 
   .login_logout{
     position relative
     top 2px
     color white
   }
-
+  .dropdown-menu
+    font-size 2rem
+    left -70px
 
   #search-input-tab .tab-icon
     sprite_mixin(0px, 80px, 40px, 40px )
@@ -50,7 +55,7 @@ nav
 
   #login
     .tab-icon
-      sprite_mixin(0px, 160px, 40px,   40px )
+      sprite_mixin(0px, 160px, 40px, 40px )
       margin-top 16px
 
     h1
