--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -6,11 +6,8 @@
     Your peers will shun you, and your significant other will start to question your...
     <a href='#'>more on Wikipedia...</a>
   </p>
-  <div class='related-tags'>
-    <div>Frameworks</div>
-    <div>AWS</div>
-    <div>Java</div>
-    <div>Android</div>
+  <div class='related-tags' ng-repeat='tag in relatedTags'>
+    <div>{{tag}}</div>
   </div>
 </aside>
 <ul id='links'>
