move some styling from index.html to CSS file

--- a/css/imports/components/_nav.styl
+++ b/css/imports/components/_nav.styl
@@ -43,6 +43,11 @@ nav
     top 2px
     color white
   }
+
+  .userSettings
+    color white
+    font-size 2rem
+
   .dropdown-menu
     font-size 2rem
     left -70px
