altered the type ahead stylings

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -5,6 +5,14 @@
 global-reset()
 *,*:before,*:after 
   box-sizing: border-box
+input
+  -webkit-appearnace none
+  border-radius 0
+  border none
+  margin 0
+  padding 0
+  resize none
+  outline none
 
 //Variables and Mixins
 @import ('./imports/mixins/_sprites.styl')
