--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,7 @@ table{border-collapse:separate;border-spacing:0;vertical-align:middle}
 caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}
 a img{border:none}
 *,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+input{-webkit-appearnace:none;-webkit-border-radius:0;border-radius:0;border:none;margin:0;padding:0;resize:none;outline:none}
 @font-face{font-family:'icomoon';src:url("../lib/icomoon76310/fonts/icomoon.eot");src:url("../lib/icomoon76310/fonts/icomoon.eot?#iefix") format('embedded-opentype'),url("../lib/icomoon76310/fonts/icomoon.woff") format('woff'),url("../lib/icomoon76310/fonts/icomoon.ttf") format('truetype'),url("../lib/icomoon76310/fonts/icomoon.svg#icomoon") format('svg');font-weight:normal;font-style:normal}
 .icon-bullhorn,.icon-book{font-family:'icomoon';speak:none;font-style:normal;font-weight:normal;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased}
 .icon-bullhorn:before{content:"\e000"}
@@ -33,8 +34,8 @@ a :hover{text-decoration:underline}
 }@media screen and (min-width: 1000px){.big-tags{margin:0;}
 .big-tags a{margin:5px 1%;width:23%}
 }.submission-form{display:inline}
-.main-input{-webkit-transition:background-color 0.3s ease;-moz-transition:background-color 0.3s ease;-o-transition:background-color 0.3s ease;-ms-transition:background-color 0.3s ease;transition:background-color 0.3s ease;background-color:#333;display:none;min-height:80px;position:relative;width:100%;}
-.main-input .main-input-text,.main-input .placeholder{-webkit-transition:color 0.3s ease;-moz-transition:color 0.3s ease;-o-transition:color 0.3s ease;-ms-transition:color 0.3s ease;transition:color 0.3s ease;background-color:transparent;color:#999;font:300 2.4rem "source-sans-pro",arial,sans;left:0;line-height:80px -22 -20;padding:22px 20px 20px;position:absolute;top:0;width:100%}
+.main-input{-webkit-transition:background-color 0.3s ease;-moz-transition:background-color 0.3s ease;-o-transition:background-color 0.3s ease;-ms-transition:background-color 0.3s ease;transition:background-color 0.3s ease;background-color:#333;display:none;min-height:80px;position:relative;width:100%;font-size:0;}
+.main-input .main-input-text,.main-input .placeholder{-webkit-transition:color 0.3s ease;-moz-transition:color 0.3s ease;-o-transition:color 0.3s ease;-ms-transition:color 0.3s ease;transition:color 0.3s ease;background-color:transparent;color:#999;font:300 2.4rem "source-sans-pro",arial,sans;left:0;line-height:38px;padding:22px 20px 20px;position:absolute;top:0;width:100%}
 .main-input .placeholder{overflow:hidden;white-space:nowrap}
 .main-input .icon{-webkit-transition:opacity 0.3s ease;-moz-transition:opacity 0.3s ease;-o-transition:opacity 0.3s ease;-ms-transition:opacity 0.3s ease;transition:opacity 0.3s ease;left:20px;opacity:.5;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";filter:alpha(opacity=50);position:absolute;top:20px}
 .main-input.open{background-color:#404040;display:inline-block}
@@ -42,10 +43,10 @@ a :hover{text-decoration:underline}
 .main-input:hover .main-input-text,.main-input.typing .main-input-text{color:#fff}
 .main-input:hover .icon,.main-input.typing .icon{opacity:1;-ms-filter:none;filter:none}
 .main-input.has-text .placeholder{display:none}
-.main-input.typing.has-text .suggestions{border-top:1px solid #666;height:auto}
-.main-input .typeahead.dropdown-menu{background-color:#404040;overflow:hidden;width:100%;z-index:1}
-.main-input .typeahead.dropdown-menu li a{include:transition:"all 0.1s ease";;border-top:1px solid #666;color:#ccc;font:400 1.8rem "source-sans-pro",arial,sans;padding:16px 20px;text-decoration:none;}
-.main-input .typeahead.dropdown-menu li a:hover{background-color:#595959;color:#fff}
+.main-input.typing.has-text .typeahead.dropdown-menu{border-top:1px solid #666;height:auto}
+.main-input .typeahead.dropdown-menu{background-color:#404040;border:none;-webkit-border-radius:0;border-radius:0;-webkit-box-shadow:none;box-shadow:none;margin:0;overflow:hidden;padding:0;width:100%;z-index:1}
+.main-input .typeahead.dropdown-menu li a{include:transition:"all 0.1s ease";;border-top:1px solid #666;color:#ccc;font:400 1.8rem "source-sans-pro",arial,sans;padding:16px 20px;text-decoration:none}
+.main-input .typeahead.dropdown-menu li.active a,.main-input .typeahead.dropdown-menu li a:hover{background-color:#595959;background-image:none;color:#fff}
 @media screen and (min-width: 600px){.main-input{border-left:1px solid #4d4d4d;display:inline-block;width:50%;}
 .main-input .main-input-text,.main-input .placeholder{padding:22px 20px 20px 70px}
 .main-input.typing .placeholder{display:none}
@@ -59,7 +60,9 @@ nav #logo-main{background-image:url("../images/sprite.svg");background-repeat:no
 nav #logo-github{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -220px;height:60px;width:60px;margin-top:0;margin-left:10px;}
 nav #logo-github #avatar{border-width:0}
 nav .login_logout{position:relative;top:2px;color:#fff}
-nav .dropdown-menu{font-size:2rem;left:-70px}
+nav .userSettings{color:#fff;font-size:2rem}
+nav .dropdown-menu{font-size:2rem;left:-70px;background-color:#404040;overflow:hidden;width:100%;z-index:1}
+nav .dropdown-menu li a{include:transition:"all 0.1s ease";;border-top:1px solid #666;color:#ccc;font:400 1.8rem "source-sans-pro",arial,sans;padding:16px 20px;text-decoration:none}
 nav #search-input-tab .tab-icon{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -80px;height:40px;width:40px}
 nav #paste-link-input-tab .tab-icon{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -120px;height:40px;width:40px}
 nav #login .tab-icon{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -160px;height:40px;width:40px;margin-top:16px}
@@ -133,17 +136,17 @@ header h2{color:#b8e864;display:inline-block;font:300 1.8rem "source-sans-pro",a
 }.tag{border:1px solid #000;-webkit-border-radius:3px;border-radius:3px;display:inline-block;float:left;margin:0 5px;padding:3px 12px;position:relative;cursor:pointer}
 .tag:after{right:2px;top:-5px;content:'x';font-size:10px;position:absolute}
 .tag:hover{background-color:#808080}
-.modal{width:50%;margin-left:-25%;}
-.modal .modal-header{font:400 3.6rem "source-sans-pro",arial,sans}
-.modal .modal-body{font:400 1.8rem "source-sans-pro",arial,sans;overflow:visible;}
-.modal .modal-body .item-info{margin:0 0 10px 0;padding:0;border-bottom:2px solid #e6e6e6;}
-.modal .modal-body .item-info .title{font:400 2.4rem "source-sans-pro",arial,sans;margin:0;border-bottom:0}
-.modal .modal-body .item-info .url{font:300 1.4rem "source-sans-pro",arial,sans;margin-right:5px;display:inline-block;white-space:nowrap;overflow:hidden;-o-text-overflow:ellipsis;text-overflow:ellipsis;border-bottom:0}
-.modal .modal-body .level-question{display:inline-block;margin-right:40px}
-.modal .modal-body .category-buttons{margin:0 5px}
-.modal .modal-body .suggested-tags{color:#9dde64;font-style:italic}
-.modal .modal-body #spinner{position:absolute;left:48%}
-.modal .modal-body .item-submit{float:right;margin-bottom:10px}
+.link-form{width:50%;margin-left:-25%;}
+.link-form .link-form-header{font:400 3.6rem "source-sans-pro",arial,sans}
+.link-form .link-form-body{font:400 1.8rem "source-sans-pro",arial,sans;overflow:visible;}
+.link-form .link-form-body .item-info{margin:0 0 10px 0;padding:0;border-bottom:2px solid #e6e6e6;}
+.link-form .link-form-body .item-info .title{font:400 2.4rem "source-sans-pro",arial,sans;margin:0;border-bottom:0}
+.link-form .link-form-body .item-info .url{font:300 1.4rem "source-sans-pro",arial,sans;margin-right:5px;display:inline-block;white-space:nowrap;overflow:hidden;-o-text-overflow:ellipsis;text-overflow:ellipsis;border-bottom:0}
+.link-form .link-form-body .level-question{display:inline-block;margin-right:40px}
+.link-form .link-form-body .category-buttons{margin:0 5px}
+.link-form .link-form-body .suggested-tags{color:#9dde64;font-style:italic}
+.link-form .link-form-body #spinner{position:absolute;left:48%}
+.link-form .link-form-body .item-submit{float:right;margin-bottom:10px}
 #preview-pane{position:absolute;right:0;height:100%;width:25%;margin-right:50px;border:1px dashed #000;overflow:scroll;display:none;}
 #preview-pane #close-preview{position:absolute;top:10px;right:10px;background:#00f;width:10px;height:10px}
 .preview-logo{color:#fff}
