refactored back to using mixin in mixin

--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -60,7 +60,7 @@
           transform rotate(45deg)
 
         &:before
-          @extend .sprite-arrow-up-white
+          sprite-arrow-up-white()
           content ""
           display inline-block
 
@@ -100,7 +100,7 @@
           transform rotate(45deg)
 
         &:before
-          @extend .sprite-arrow-up-white
+          sprite-arrow-up-white()
           content ""
           display inline-block
 
@@ -142,7 +142,7 @@
       }
 
       &:before
-        @extend .sprite-arrow-down-white
+        sprite-arrow-down-white()
         content ""
         display inline-block
 
@@ -184,7 +184,7 @@
       }
 
       &:before
-        @extend .sprite-arrow-down-white
+        sprite-arrow-down-white()
         content ""
         display inline-block
 
