refactored to include mixin in mixin

--- a/css/imports/components/_main-input.styl
+++ b/css/imports/components/_main-input.styl
@@ -100,7 +100,7 @@
       color white
 
   #search-input .icon
-    @extend .sprite-search-white;
+    sprite-search-white()
 
   #paste-link-input .icon
-    @extend .sprite-plus-white;
+    sprite-plus-white()
