--- a/css/imports/variables/_sprites.styl
+++ b/css/imports/variables/_sprites.styl
@@ -1,20 +1,20 @@
-.sprite-logo
+sprite-logo()
   sprite_mixin(0px, 0px,   80px, 80px)
 
-.sprite-search-white
-  sprite_mixin(0px, 80px,  40px, 40px)
-
-.sprite-plus-white
+sprite-plus-white()
   sprite_mixin(0px, 120px, 40px, 40px)
 
-.sprite-twitter-white
+sprite-search-white()
+  sprite_mixin(0px,  80px, 40px, 40px)
+
+sprite-twitter-white()
   sprite_mixin(0px, 160px, 40px, 40px)
 
-.sprite-arrow-up-white
+sprite-arrow-up-white()
   sprite_mixin(0px, 200px, 20px, 20px)
 
-.sprite-arrow-down-white
+sprite-arrow-down-white()
   sprite_mixin(40px, 200px, 20px, 20px)
 
-.sprite-twitter-white
+sprite-twitter-white()
   sprite_mixin(0px, 160px, 40px, 40px)
