--- a/public/partials/tags_modal.html
+++ b/public/partials/tags_modal.html
@@ -1,8 +1,8 @@
-<div class="modal-header">
+<div class="link-form-header">
   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
   <h3>Add helpful info</h3>
 </div>
-<div class="modal-body">
+<div class="link-form-body">
   <div class="item-info">
     <div class='item-info title' ng-model='suggestedData.title'>{{suggestedData.title}}</div>
     <div class='url'><a href='{{item.link}}'>{{item.link}}</a></div>
