--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,11 +1,6 @@
 <h1 class='title' id='articles-title'>{{tag}}</h1> 
 <aside id='about'>
-  <p>
-    This topic is critical to computer science. Absolutely critical. You should totally 
-    read tons of articles about it. Employers will laugh at you if you don't know about this.
-    Your peers will shun you, and your significant other will start to question your...
-    <a href='#'>more on Wikipedia...</a>
-  </p>
+  <p>{{stackOverflowSummary.summary}} <a ng-href='http://stackoverflow.com/tags/{{stackOverflowSummary.urlTag}}/info'>More on StackOverflow.</a></p>
   <div class='related-tags' ng-repeat='tag in relatedTags'>
     <div>{{tag}}</div>
   </div>
