--- a/public/partials/loggedout_popover.html
+++ b/public/partials/loggedout_popover.html
@@ -1,5 +1,8 @@
+<button class="popover-close close" type="button" ng-click="dismiss()" aria-hidden="true">×</button>
+<h3></h3>
 <div class="popover-text">
-<p>To upvote please</p>
-<p><a href="http://127.0.0.1:3000/auth/github">log in with GitHub</a></p>
+  <p>To vote please log in with GitHub</p>
 </div>
-<button type="button" class="btn" ng-click="dismiss()">Close</button>
+<a href="/auth/github">
+<div class="popover-github"></div>
+</a>
