--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -19,7 +19,7 @@
         
 
     .preview-logo
-      sprite_mixin(0px, 280px, 60px, 60px)
+      sprite-preview()
       &:hover
         cursor pointer
     h2
