--- a/css/imports/components/_nav.styl
+++ b/css/imports/components/_nav.styl
@@ -28,10 +28,10 @@ nav
 
 
   #logo-main
-    sprite_mixin(0px, 0px, 80px, 80px)
+    sprite-logo()
 
   #logo-github
-    sprite_mixin(0px, 220px, 60px, 60px)
+    sprite-github()
     margin-top 0px
     margin-left 10px
 
@@ -65,14 +65,14 @@ nav
     text-decoration none
 
   #search-input-tab .tab-icon
-    sprite_mixin(0px, 80px, 40px, 40px )
+    sprite-search-white()
 
   #paste-link-input-tab .tab-icon
-    sprite_mixin(0px, 120px, 40px, 40px )
+    sprite-plus-white()
 
   #login
     .tab-icon
-      sprite_mixin(0px, 160px, 40px, 40px )
+      sprite-twitter-white()
       margin-top 16px
 
     h1
