--- a/css/imports/variables/_icons.styl
+++ b/css/imports/variables/_icons.styl
@@ -1,16 +1,16 @@
 @font-face {
-  font-family: 'icomoon';
-  src:url('../lib/icomoon76310/fonts/icomoon.eot');
-  src:url('../lib/icomoon76310/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-    url('../lib/icomoon76310/fonts/icomoon.woff') format('woff'),
-    url('../lib/icomoon76310/fonts/icomoon.ttf') format('truetype'),
-    url('../lib/icomoon76310/fonts/icomoon.svg#icomoon') format('svg');
+  font-family: 'readup-icons';
+  src:url('../lib/readup-icons87652/fonts/readup-icons.eot');
+  src:url('../lib/readup-icons87652/fonts/readup-icons.eot?#iefix') format('embedded-opentype'),
+    url('../lib/readup-icons87652/fonts/readup-icons.woff') format('woff'),
+    url('../lib/readup-icons87652/fonts/readup-icons.ttf') format('truetype'),
+    url('../lib/readup-icons87652/fonts/readup-icons.svg#readup-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-.icon-bullhorn, .icon-book {
-  font-family: 'icomoon';
+.icon-readup:before, .icon-eye:before, .icon-github:before, .icon-checkmark:before, .icon-checkmark:after {
+  font-family: 'readup-icons';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -19,9 +19,18 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
 }
-.icon-bullhorn:before {
+.icon-readup:before {
   content: "\e000";
 }
-.icon-book:before {
+.icon-eye:before {
   content: "\e001";
+}
+.icon-github:before {
+  content: "\e002";
+}
+.icon-checkmark:before {
+  content: "\e003";
+}
+.icon-checkmark:after {
+  content: "\e003";
 }
