--- a/css/imports/variables/_sprites.styl
+++ b/css/imports/variables/_sprites.styl
@@ -18,3 +18,12 @@ sprite-arrow-down-white()
 
 sprite-twitter-white()
   sprite_mixin(0px, 160px, 40px, 40px)
+
+sprite-github()
+  sprite_mixin(0px, 220px, 60px, 60px)
+
+sprite-preview()
+  sprite_mixin(0px, 280px, 60px, 60px)
+
+sprite-check-mark()
+  sprite_mixin(0px, 330px, 60px, 60px)
