--- a/css/imports/components/link-form.styl
+++ b/css/imports/components/link-form.styl
@@ -53,9 +53,14 @@
 
       #link-form-topic-search
         background-color $fe-grey
-        color $fo-grey
+        color $be-grey
         font $sans-xs
         width 100%
+        padding-left 5px
+
+      input:focus::-webkit-input-placeholder 
+        color: transparent;
+      
 
       .link-form-topic-submit
         background-color $green
@@ -76,50 +81,3 @@
     margin 0
     position absolute
     top $block
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
