changed color of big add link button

--- a/css/imports/components/link-form.styl
+++ b/css/imports/components/link-form.styl
@@ -68,11 +68,12 @@
         font $sans-xs
 
   .close
-    background-color $green-med
+    background-color #4CC255
     color white
     padding 14px
     text-align center
     width 100%
+    opacity 1
 
 
 @media screen-to-break-one
