--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,8 +1,13 @@
 <h1 class='title' id='articles-title'>{{tag}}</h1> 
 <aside id='about'>
   <p>{{stackOverflowSummary.summary}} <a ng-href='http://stackoverflow.com/tags/{{stackOverflowSummary.urlTag}}/info'>More on Stack Overflow.</a></p>
-  <div class='related-tags' ng-repeat='tag in relatedTags'>
-    <div>{{tag}}</div>
+  <br>
+  <br>
+  <p>Related tags:</p>
+  <div class="related-tag-container">
+  <div class='related-tag' ng-repeat='tag in relatedTags'>
+    <a ng-href="/#/{{tag}}">{{tag}}</a>
+  </div>
   </div>
 </aside>
 <ul id='links'>
