--- a/css/imports/components/link-form.styl
+++ b/css/imports/components/link-form.styl
@@ -21,6 +21,11 @@
       color white
       font $sans-xxs
 
+    .link-form-tags-required
+      font $sans-xs
+      display inline-block
+      color white
+
     .tag
       border-bottom 2px solid $fo-grey
       color $be-grey
@@ -58,9 +63,9 @@
         width 100%
         padding-left 5px
 
-      input:focus::-webkit-input-placeholder 
+      input:focus::-webkit-input-placeholder
         color: transparent;
-      
+
 
       .link-form-topic-submit
         background-color $green
@@ -68,12 +73,17 @@
         font $sans-xs
 
   .close
-    background-color #4CC255
+    background-color #5DD166
     color white
     padding 14px
     text-align center
     width 100%
-    opacity 1
+    opacity 0.9
+    font $sans-s
+
+    &:hover
+      transition 0.2s ease
+      opacity 1
 
 
 @media screen-to-break-one
