--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -8,18 +8,21 @@
     .title-wrap 
       max-height  200px
       h1 
-        width 500px
-        a
-        color $ho-grey
-        font $sans-m
-        white-space nowrap
-        width 100%            
+        width 100%
         overflow hidden   /* "overflow" value must be different from "visible" */ 
         text-overflow ellipsis  // text-overflow ellipsis
+        color $ho-grey
+        a
+          color $ho-grey
+          font $sans-m
+          white-space nowrap
+          width 100%  
+          font-size 2rem          
         
 
     .preview-logo
       sprite-preview()
+      height 50px;
       &:hover
         cursor pointer
     h2
@@ -198,11 +201,13 @@
 @media screen-to-break-one
   #links
     margin 60px 0 0
-
     .link
       border-bottom none
-      padding 0 30px 30px ($block*2)
-
+      padding 0 30px 30px ($block*1.6)
+      .title-wrap
+        h1
+          a
+            font-size 2.9rem
       .votes
         left 25px
         margin 0
@@ -217,3 +222,10 @@
 @media screen-to-break-two
   #links
     width 73%
+    .link
+      .title-wrap
+        h1
+          a
+            font-size 3.6rem
+
+      
