--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -12,25 +12,38 @@
         a
         color $ho-grey
         font $sans-m
-        white-space nowrap
-        width 100%
+        margin 0
         overflow hidden   /* "overflow" value must be different from "visible" */
         text-overflow ellipsis  // text-overflow ellipsis
+        white-space nowrap
+        width 100%
 
-
-    .preview-logo
-      sprite-preview()
-      &:hover
-        cursor pointer
     h2
       a
         color $co-grey
-        font $sans-s-light
+        font $sans-xs-light
         margin 10px 0 0
         overflow hidden
 
-    .categories-name
-      font $sans-xs-light
+    .meta-data
+      .categories-name
+        display inline-block
+        font $sans-xs-light
+
+        &:after
+          content "|"
+          margin-right 5px
+
+      .preview-logo
+        display inline-block
+        margin-left -10px
+        position relative
+        top 10px
+        sprite-preview()
+
+        &:hover
+          cursor pointer
+
 
     .votes
       font-size 0
