--- a/css/imports/variables/_media_queries.styl
+++ b/css/imports/variables/_media_queries.styl
@@ -1,3 +1,5 @@
 screen-to-break-one = 'screen and (min-width: '+ $break-one +')'
 
 screen-to-break-two = 'screen and (min-width: '+ $break-two +')'
+
+screen-to-break-middle = 'screen and (min-width: '+ $break-middle +')'
