renamed lots of css files and added a footer file

--- a/css/imports/components/_about.styl
+++ b/css/imports/components/_about.styl
@@ -22,7 +22,7 @@
     padding 20px 0 4px
 
   p
-    font $sans-xs-spaced
+    font $sans-xs
 
     a
       color $fo-grey
@@ -57,7 +57,7 @@
     padding 15px 0 0 2%
     width 44%
     white-space nowrap
-    font $sans-xs-spaced
+    font $sans-xs
 
 
     &:hover
