renamed some files, and added a popover partial for logged out link pasting

--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,6 +1,6 @@
 <h1 class='title' id='articles-title'>{{tag}}</h1>
 <aside id='about'>
-  <p>{{stackOverflowSummary.summary}} <a ng-href='http://stackoverflow.com/tags/{{stackOverflowSummary.urlTag}}/info'>More on Stack Overflow.</a></p>
+  <p>{{stackOverflowSummary.summary}} <a ng-href='http://stackoverflow.com/tags/{{stackOverflowSummary.urlTag}}/info' target='_blank'>More on Stack Overflow.</a></p>
   <br>
   <br>
   <p>Related tags:</p>
