--- a/css/imports/components/_displayFrameDirective.styl
+++ b/css/imports/components/_displayFrameDirective.styl
@@ -1,13 +1,12 @@
 #preview-pane 
   position absolute 
-  top 270px
-  right 5% 
+  top 250px
+  right 0px 
   height 300px
   width 85% 
   margin-right 0px 
   overflow scroll
-  display none
-  // border 4px solid black
+  display none  
   img
     border 4px double black
 
@@ -46,7 +45,7 @@
 
 @media screen-to-break-two
   #preview-pane
-    width 28%
+    width 27%
     right 2%
     height 420px
 
