--- a/css/imports/components/_big_tags.styl
+++ b/css/imports/components/_big_tags.styl
@@ -4,7 +4,7 @@
 
   a
     transition border 0.1s ease color 0.1s ease
-    border-bottom 2px solid $bluegreen
+    border-bottom 2px solid $green-light
     color $ho-grey
     display inline-block
     font $sans-m
@@ -18,7 +18,7 @@
     white-space nowrap
 
     &:hover
-      border-bottom 6px solid $do-grey
+      border-bottom 6px solid black
       color $ho-grey
       transition all .2s ease
       cursor pointer
@@ -26,7 +26,7 @@
   &.click-for-more
     border-bottom 6px solid $ho-grey
 
-    
+
 
   // &:hover
   //   border-bottom 6px solid $ho-grey
