header styles changed in links stylesheet

--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -27,29 +27,12 @@
     h2
       a
         color $co-grey
-        font $sans-xs-light
+        font $sans-s-light
         margin 10px 0 0
         overflow hidden
 
-    .meta-data
-      .categories-name
-        display inline-block
-        font $sans-xs-light
-
-        &:after
-          content "|"
-          margin-right 5px
-
-      .preview-logo
-        display inline-block
-        margin-left -10px
-        position relative
-        top 10px
-        sprite-preview()
-
-        &:hover
-          cursor pointer
-
+    .categories-name
+      font $sans-xs-light
 
     .votes
       font-size 0
