styling updates and changing sprites file

--- a/css/imports/components/_display_frame_directive.styl
+++ b/css/imports/components/_display_frame_directive.styl
@@ -39,16 +39,18 @@
 
 @media screen-to-break-middle
   #preview-pane
-    width 44%
+    width 46%
+    right 4%
+    top 400px
     height 300px
 
 
 @media screen-to-break-two
   #preview-pane
-    width 27%
+    width 28%
     right 2%
+    top 250px
     height 420px
-
 
 
 
