--- a/css/imports/components/_title.styl
+++ b/css/imports/components/_title.styl
@@ -21,6 +21,13 @@
       margin 100px 0 60px
       padding 0 80px
 
+  #articles-title
+    width 63%
+
+@media screen-to-break-middle
+  #articles-title
+    width 68%
+
 @media screen-to-break-two
-  .title #articles-title
-    width 73%
+  #articles-title
+    width 70%
