--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -11,6 +11,7 @@
   </div>
 </aside>
 
+<div class='filter-word'>Filter</div>
 <div class='filter-options' ng-repeat='category in cats' ng-click="switchCat(category)">
 {{category}}
 </div>
