--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -221,8 +221,9 @@
 
 .filter-word
   font $sans-xs
-  margin 10px 3% 0
+  margin 10px 18% 0 3%
   padding 15px 0 0 0.5%
+  display inline-block
 
 .filter-options
   border-bottom 2px solid
@@ -237,9 +238,21 @@
   box-sizing border-box
   vertical-align baseline
 
+  &.selected
+    border-bottom 4px solid $fo-grey
+    font $sans-xs
+    color $fo-grey
+
+    &:after
+      @extend .icon-checkmark:after
+      float right
+
+
+
   &:hover
     transition all 0.2s ease
     border-bottom 4px solid $fo-grey
+    cursor pointer
 
 
 @media screen-to-break-one
@@ -262,9 +275,10 @@
         .vote-count
           font $sans-ms-light
   .filter-options
-    width 10%
+    width 10.5%
+    margin 10px 1% 0
   .filter-word
-    margin 10px 2% 0 2%
+    margin 10px 2% 0
 
 
 @media screen-to-break-two
