adding spinner style for link form

--- a/css/imports/components/_link_form.styl
+++ b/css/imports/components/_link_form.styl
@@ -4,6 +4,10 @@
   margin $block 0 0 0
   width 100%
   z-index 1
+  #spinner
+    left 50%
+    top 30%
+    position absolute
 
   h1
     color $do-grey
