--- a/public/partials/link_form.html
+++ b/public/partials/link_form.html
@@ -1,5 +1,5 @@
 <div class='link-form'>
-  <span id='spinner' us-spinner='{lines:6, length: 0, width: 15, radius: 12}' ng-hide='doneLoading'></span>
+  <span id='spinner' us-spinner='{lines:6, length: 0, width: 15, radius: 12, color: "grey"}' ng-hide='doneLoading'></span>
   <h1 class='link-form-title' ng-model='suggestedData.title'>{{suggestedData.title}}</h1>
   <div class='link-form-section'>
     <h2>Pick topics:</h2>
